-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Beta 3
-
None
-
Touch
-
1dc60a6b0c6fbf8da9473eb5b0435c1738865ce5
Steps:
- run the gallery example on a touch device
- open the side drawer
- drag to close
Expected result:
- the drawer can be dragged to close from the outside and from the inside
Actual result: - the drawer cannot be dragged to close from the inside of the drawer
| For Gerrit Dashboard: QTBUG-60598 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 193801,2 | Drawer: fix dragging from the inside over interactive contents | 5.9.0 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |