Drawer: fix dragging from the inside over interactive contents

Task-number: QTBUG-60598
Change-Id: I65e6e9440c9450fbec4a53b9ee60e11b919c090a
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>